--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <div class="logo-container">
                 <a href="index.html"><img src="/images/cendien_corp_logo.jpg" alt="Cendien Corporation Logo" id="company-logo"></a>
             </div>
-            <nav> {/* Updated nav structure */}
+            <nav> 
                 <label for="section-selector" class="visually-hidden">Select a Service:</label>
                 <select id="section-selector">
                     <option value="" disabled>** BROWSE SERVICES **</option> <option value="home_overview" selected>Homepage Overview</option> <option value="infor_consulting">Infor Consulting</option>
