--- a/public/resume-generator.html
+++ b/public/resume-generator.html
@@ -52,6 +52,9 @@ Or, 'Create a resume for a recent computer science graduate targeting a junior s
         </div>
     </footer>
 
+    <script src="resume-script.js"></script>
+    <script src="https://unpkg.com/docx@8.5.0/build/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="resume-script.js"></script> 
 </body>
 </html>
