--- a/public/resume-generator.html
+++ b/public/resume-generator.html
@@ -38,11 +38,12 @@
 Or, 'Create a resume for a recent computer science graduate targeting a junior software developer role. Skills: Python, Java, React, SQL. Include a project section with 2-3 placeholder projects.'" required></textarea>
                 </div>
                 
-                <button type="submit" id="generate-resume-pdf-button" class="btn btn-primary">Generate & Download Resume PDF</button>
+                    <button type="submit" id="generate-resume-pdf-button" class="btn btn-primary">Generate & Download Resume PDF</button>
+                    <button type="button" id="generate-resume-docx-button" class="btn btn-secondary" style="margin-top: 10px;">Generate & Download Resume DOCX</button>
             </form>
 
             <div id="resume-generation-status" class="loading-container" style="display: none; margin-top: 2rem;">
-                </div>
+            </div>
         </section>
     </main>
 
