--- a/public/resume-generator.html
+++ b/public/resume-generator.html
@@ -24,7 +24,7 @@
     <main>
         <section id="resume-generator-tool" class="container content-card">
             <h2>AI Resume PDF Generator</h2>
-            <p>Provide your full name and a prompt describing the type of resume you need or the job role you're targeting (include key experiences or skills if you have specific points in mind). Our AI will generate the content, and you can download it as a PDF.</p>
+            <p>Provide your full name and a prompt describing the type of resume you need or the job role you're targeting (include key experiences or skills if you have specific points in mind). Our AI will generate the content, and you can download it in PDF or DOCX formats.</p>
             
             <form id="resume-details-form">
                 <div class="form-group">
