--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
                     <option value="about_us">About Cendien</option>
                     </select>
                 <a href="resume-generator.html" class="nav-link resume-nav-link">AI Resume Generator</a>
+                <a href="rfp-question-generator.html" class="nav-link">RFP Question Generator</a>
             </nav>
         </div>
     </header>
