--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -22,12 +22,12 @@
 
     <main>
         <section id="rfp-question-tool" class="container content-card">
-            <h2>AI RFP Question Generator</h2>
-            <p>Upload an RFP (Request for Proposal) PDF file. Our AI will analyze its content and generate clarification questions to help you prepare a comprehensive proposal.</p>
+            <h2>RFP Question Generator</h2>
+            <p>Upload your RFP PDF file. Our AI will analyze its content and generate clarification questions to help you prepare a comprehensive proposal.</p>
             
             <form id="rfp-details-form">
                 <div class="form-group">
-                    <label for="rfpFileUpload">Upload RFP Document (PDF only):</label>
+                    <label for="rfpFileUpload">Upload RFP (PDF only):</label>
                     <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
                 </div>
                 
