--- a/public/resume-generator.html
+++ b/public/resume-generator.html
@@ -17,7 +17,7 @@
             <nav>
                 <a href="index.html" class="nav-link">Home</a>
                 <span class="nav-current-page">AI Resume Generator</span>
-                <a href="rfp-question-generator.html" class="nav-link">RFP Question Generator</a> {/* <-- New link added here */}
+                <a href="rfp-question-generator.html" class="nav-link">RFP Question Generator</a>
             </nav>
         </div>
     </header>
