--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -31,7 +31,7 @@
                     <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
                 </div>
                 
-                <button type="submit" id="generate-questions-button" class="btn btn-primary">Generate Questions</button>
+                <button type="submit" id="generate-questions-button" class="btn btn-secondary">Generate Questions</button>
             </form>
 
             <div id="question-generation-status" class="loading-container" style="display: none; margin-top: 2rem;">
