--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -16,6 +16,7 @@
             <nav>
                 <a href="index.html" class="nav-link">Home</a>
                 <span class="nav-current-page">RFP Question Generator</span>
+                <a href="resume-generator.html" class="nav-link resume-nav-link">Resume Generator</a>
             </nav>
         </div>
     </header>
