--- a/public/resume-generator.html
+++ b/public/resume-generator.html
@@ -48,7 +48,7 @@ Or, 'Create a resume for a recent computer science graduate targeting a junior s
                     </select>
                 </div>
                 
-                <button type="submit" id="generate-resume-button" class="btn btn-primary">Generate & Download</button>
+                <button type="submit" id="generate-resume-button" class="btn btn-secondary">Generate & Download</button>
             </form>
 
             <div id="resume-generation-status" class="loading-container" style="display: none; margin-top: 2rem;">
