--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -32,7 +32,7 @@
                     <label for="rfpFileUpload">Upload RFP Document (PDF only):</label>
                     <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
                 </div>
-                <button type="submit" id="generate-analysis-button" class="btn btn-secondary">Analyze RFP</button> {/* Updated button text */}
+                <button type="submit" id="generate-analysis-button" class="btn btn-secondary">Analyze RFP</button>
             </form>
             <div id="analysis-status-area" class="loading-container" style="display: none; margin-top: 2rem;">
             </div>
