--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><img src="/images/cendien_corp_logo.jpg" alt="Cendien Corporation Logo" id="company-logo"></a>
             </div>
             <nav>
-                <a href="index.html" class="nav-link">H</a>
+                <a href="index.html" class="nav-link"></a>
                 <span class="nav-current-page">RFP Analyzer</span>
                 <a href="resume-generator.html" class="nav-link"></a> 
             </nav>
