--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -36,6 +36,34 @@
             
             <form id="rfp-details-form">
                 <div class="form-group">
+                    <label for="rfpTitle">RFP Title / Client Name:</label>
+                    <input type="text" id="rfpTitle" name="rfpTitle" placeholder="e.g., Project Alpha RFP or Client XYZ Corp" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="rfpType">RFP Type:</label>
+                    <select id="rfpType" name="rfpType" class="section-selector" style="min-width: 100%;"> {/* Reusing section-selector for now */}
+                        <option value="IT Support">IT Support</option>
+                        <option value="IT Staffing">IT Staffing</option>
+                        <option value="ERP Managed Services">ERP Managed Services</option>
+                        <option value="Custom Software Development">Custom Software Development</option>
+                        <option value="Cloud Migration">Cloud Migration</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="submittedBy">Person Submitting / Analyzing:</label>
+                    <select id="submittedBy" name="submittedBy" class="section-selector" style="min-width: 100%;">
+                        <option value="Aish">Aish</option>
+                        <option value="Helen">Helen</option>
+                        <option value="Shirley">Shirley</option>
+                        <option value="Israel">Israel</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label for="rfpFileUpload">Upload RFP Document (PDF only):</label>
                     <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
                 </div>
