--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -36,8 +36,8 @@
             
             <form id="rfp-details-form">
                 <div class="form-group">
-                    <label for="rfpTitle">RFP Title / Client Name:</label>
-                    <input type="text" id="rfpTitle" name="rfpTitle" placeholder="e.g., Project Alpha RFP or Client XYZ Corp" required>
+                    <label for="rfpTitle">RFP Title:</label>
+                    <input type="text" id="rfpTitle" name="rfpTitle" placeholder="Enter a Title" required>
                 </div>
 
                 <div class="form-group">
