--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -28,6 +28,14 @@
 
             <div id="saved-analyses-section" style="margin-bottom: 2.5rem;">
                 <h3>Previously Analyzed RFPs</h3>
+                <div id="saved-analyses-header" class="analyzed-rfp-item" style="font-weight: bold; border-bottom: 2px solid #ccc; background-color: #f8f9fa;">
+                    <span class="rfp-col-title">RFP Title</span>
+                    <span class="rfp-col-type">RFP Type</span>
+                    <span class="rfp-col-owner">Owner</span>
+                    <span class="rfp-col-date">Date</span>
+                    <span class="rfp-col-status">Status</span>
+                    <span class="rfp-col-actions">Actions</span>
+                </div>
                 <div id="saved-analyses-list" class="analyzed-rfp-list-container">
                     </div>
                 <p id="no-saved-analyses" style="display: none; text-align: center; margin-top: 1rem; font-style: italic;">No analyses saved yet.</p>
