--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -50,7 +50,7 @@
 
                 <div class="form-group">
                     <label for="rfpType">RFP Type:</label>
-                    <select id="rfpType" name="rfpType" class="section-selector" style="min-width: 100%;">
+                    <select id="rfpType" name="rfpType" class="section-selector">
                         <option value="IT Support">IT Support</option>
                         <option value="IT Staffing">IT Staffing</option>
                         <option value="ERP Managed Services">ERP Managed Services</option>
@@ -62,7 +62,7 @@
 
                 <div class="form-group">
                     <label for="submittedBy">Person Submitting / Analyzing:</label>
-                    <select id="submittedBy" name="submittedBy" class="section-selector" style="min-width: 100%;">
+                    <select id="submittedBy" name="submittedBy" class="section-selector">
                         <option value="Aish">Aish</option>
                         <option value="Helen">Helen</option>
                         <option value="Shirley">Shirley</option>
