--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cendien RFP Analyzer</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css"> <link rel="stylesheet" href="rfp-style.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -63,8 +62,7 @@
 
                     <div class="form-group">
                         <label for="rfpType">RFP Type:</label>
-                        <select id="rfpType" name="rfpType" class="section-selector">
-                            <option value="IT Support">IT Support</option>
+                        <select id="rfpType" name="rfpType" class="section-selector"> <option value="IT Support">IT Support</option>
                             <option value="IT Staffing">IT Staffing</option>
                             <option value="ERP Managed Services">ERP Managed Services</option>
                             <option value="Custom Software Development">Custom Software Development</option>
@@ -75,8 +73,7 @@
 
                     <div class="form-group">
                         <label for="submittedBy">Person Submitting / Analyzing:</label>
-                        <select id="submittedBy" name="submittedBy" class="section-selector">
-                            <option value="Aish">Aish</option>
+                        <select id="submittedBy" name="submittedBy" class="section-selector"> <option value="Aish">Aish</option>
                             <option value="Helen">Helen</option>
                             <option value="Shirley">Shirley</option>
                             <option value="Israel">Israel</option>
@@ -163,7 +160,6 @@
 
     <script type="module" src="rfp-script.js"></script> 
     <script>
-        // This global openTab function is for the analysis result tabs inside the modal
         const yearSpanRFP = document.getElementById('current-year-rfp');
         if (yearSpanRFP) {
             yearSpanRFP.textContent = new Date().getFullYear();
@@ -171,7 +167,6 @@
 
         function openTab(evt, tabName) {
             var i, tabcontent, tablinks;
-            // Scope to tabs within the analysis-results-area
             var resultsArea = document.getElementById('analysis-results-area');
             if (!resultsArea) return;
 
