--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cendien RFP Analyzer</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> <link rel="stylesheet" href="rfp-style.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rfp-style.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -34,7 +35,6 @@
                     <button class="rfp-list-tab-button" data-status-filter="active">Active</button>
                     <button class="rfp-list-tab-button" data-status-filter="not_pursuing">Not Pursuing</button>
                 </div>
-
                 <div id="saved-analyses-header" class="analyzed-rfp-item">
                     <span class="rfp-col-title sortable-header" data-sort-key="rfpTitle">RFP Title ⇅</span>
                     <span class="rfp-col-type sortable-header" data-sort-key="rfpType">RFP Type ⇅</span>
@@ -45,9 +45,74 @@
                 </div>
                 <div id="saved-analyses-list" class="analyzed-rfp-list-container">
                     </div>
-                <p id="no-saved-analyses" style="display: none; text-align: center; margin-top: 1rem; font-style: italic;">No analyses found for this category.</p>
+                <p id="no-saved-analyses" style="display: none; text-align: center; margin-top: 1rem; font-style: italic;">No analyses found.</p>
+                <div id="rfp-list-status-area" class="loading-container" style="display: none; margin-top: 1rem;">
+                    </div>
             </div>
         </section>
+
+        <section id="view-saved-rfp-details-section" class="container content-card" style="display: none; margin-top: 2rem;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <h2 id="view-rfp-main-title-heading">RFP Details</h2>
+                <button id="close-view-rfp-details-button" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">Close Details</button>
+            </div>
+             <div id="view-rfp-status-area" class="loading-container" style="display: none; margin-top: 1rem;"></div>
+            <div id="view-analysis-results-area"> <div class="tabs-container">
+                    <button class="tab-link active" onclick="openViewTab(event, 'view-summary-tab')">Summary</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-questions-tab')">Questions</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-deadlines-tab')">Deadlines & Format</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-requirements-tab')">Requirements</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-stakeholders-tab')">Stakeholders</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-risks-tab')">Risks</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-registration-tab')">Registration</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-licenses-tab')">Licenses</button>
+                    <button class="tab-link" onclick="openViewTab(event, 'view-budget-tab')">Budget</button>
+                </div>
+
+                <div id="view-summary-tab" class="tab-content" style="display: block;">
+                    <h3>RFP Summary:</h3>
+                    <div id="view-summary-result-content"></div>
+                </div>
+                <div id="view-questions-tab" class="tab-content">
+                    <h3>Generated Clarification Questions:</h3>
+                    <div id="view-questions-result-content"></div>
+                </div>
+                <div id="view-deadlines-tab" class="tab-content">
+                    <h3>Key Deadlines & Submission Format:</h3>
+                    <div id="view-deadlines-result-content">
+                        <h4>Deadlines:</h4>
+                        <div id="view-deadlines-only-content"></div>
+                        <h4 style="margin-top: 1rem;">Submission Format:</h4>
+                        <div id="view-submission-format-content"></div>
+                    </div>
+                </div>
+                <div id="view-requirements-tab" class="tab-content">
+                    <h3>Requirements:</h3>
+                    <div id="view-requirements-result-content"></div>
+                </div>
+                <div id="view-stakeholders-tab" class="tab-content">
+                    <h3>Mentioned Stakeholders:</h3>
+                    <div id="view-stakeholders-result-content"></div>
+                </div>
+                <div id="view-risks-tab" class="tab-content">
+                    <h3>Potential Risks/Red Flags:</h3>
+                    <div id="view-risks-result-content"></div>
+                </div>
+                <div id="view-registration-tab" class="tab-content">
+                    <h3>Registration Details:</h3>
+                    <div id="view-registration-result-content"></div>
+                </div>
+                <div id="view-licenses-tab" class="tab-content">
+                    <h3>Licenses & Certifications:</h3>
+                    <div id="view-licenses-result-content"></div>
+                </div>
+                <div id="view-budget-tab" class="tab-content">
+                    <h3>Budget Information:</h3>
+                    <div id="view-budget-result-content"></div>
+                </div>
+            </div>
+        </section>
+
 
         <div id="new-rfp-modal" class="modal-overlay" style="display: none;">
             <div class="modal-content">
@@ -59,10 +124,10 @@
                         <label for="rfpTitle">RFP Title (Optional):</label>
                         <input type="text" id="rfpTitle" name="rfpTitle" placeholder="Enter a Title for this RFP">
                     </div>
-
                     <div class="form-group">
                         <label for="rfpType">RFP Type:</label>
-                        <select id="rfpType" name="rfpType" class="section-selector"> <option value="IT Support">IT Support</option>
+                        <select id="rfpType" name="rfpType" class="section-selector">
+                            <option value="IT Support">IT Support</option>
                             <option value="IT Staffing">IT Staffing</option>
                             <option value="ERP Managed Services">ERP Managed Services</option>
                             <option value="Custom Software Development">Custom Software Development</option>
@@ -70,83 +135,50 @@
                             <option value="Other">Other</option>
                         </select>
                     </div>
-
                     <div class="form-group">
                         <label for="submittedBy">Person Submitting / Analyzing:</label>
-                        <select id="submittedBy" name="submittedBy" class="section-selector"> <option value="Aish">Aish</option>
+                        <select id="submittedBy" name="submittedBy" class="section-selector">
+                            <option value="Aish">Aish</option>
                             <option value="Helen">Helen</option>
                             <option value="Shirley">Shirley</option>
                             <option value="Israel">Israel</option>
                             <option value="Other">Other</option>
                         </select>
                     </div>
-
                     <div class="form-group">
                         <label for="rfpFileUpload">Upload RFP Document (PDF only):</label>
                         <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
                     </div>
-                    
                     <button type="submit" id="generate-analysis-button" class="btn btn-secondary">Analyze RFP</button>
                 </form>
 
-                <div id="analysis-status-area" class="loading-container" style="display: none; margin-top: 2rem;">
-                </div>
-
-                <div id="analysis-results-area" style="margin-top: 2.5rem; display: none;">
-                    <h3 style="text-align:center; margin-bottom: 1rem;">Analysis Results</h3>
+                <div id="modal-analysis-status-area" class="loading-container" style="display: none; margin-top: 2rem;">
+                    </div>
+                <div id="modal-analysis-results-area" style="margin-top: 2.5rem; display: none;">
+                     <h3 style="text-align:center; margin-bottom: 1rem;">Analysis Results</h3>
                     <div class="tabs-container">
-                        <button class="tab-link active" onclick="openTab(event, 'summary-tab')">Summary</button>
-                        <button class="tab-link" onclick="openTab(event, 'questions-tab')">Questions</button>
-                        <button class="tab-link" onclick="openTab(event, 'deadlines-tab')">Deadlines & Format</button>
-                        <button class="tab-link" onclick="openTab(event, 'requirements-tab')">Requirements</button>
-                        <button class="tab-link" onclick="openTab(event, 'stakeholders-tab')">Stakeholders</button>
-                        <button class="tab-link" onclick="openTab(event, 'risks-tab')">Risks</button>
-                        <button class="tab-link" onclick="openTab(event, 'registration-tab')">Registration</button>
-                        <button class="tab-link" onclick="openTab(event, 'licenses-tab')">Licenses</button>
-                        <button class="tab-link" onclick="openTab(event, 'budget-tab')">Budget</button>
+                        <button class="tab-link active" onclick="openModalTab(event, 'modal-summary-tab')">Summary</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-questions-tab')">Questions</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-deadlines-tab')">Deadlines & Format</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-requirements-tab')">Requirements</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-stakeholders-tab')">Stakeholders</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-risks-tab')">Risks</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-registration-tab')">Registration</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-licenses-tab')">Licenses</button>
+                        <button class="tab-link" onclick="openModalTab(event, 'modal-budget-tab')">Budget</button>
                     </div>
-
-                    <div id="summary-tab" class="tab-content" style="display: block;">
-                        <h3>RFP Summary:</h3>
-                        <div id="summary-result-content"></div>
+                    <div id="modal-summary-tab" class="tab-content" style="display: block;"><div id="modal-summary-result-content"></div></div>
+                    <div id="modal-questions-tab" class="tab-content"><div id="modal-questions-result-content"></div></div>
+                    <div id="modal-deadlines-tab" class="tab-content">
+                        <h4>Deadlines:</h4><div id="modal-deadlines-only-content"></div>
+                        <h4 style="margin-top: 1rem;">Submission Format:</h4><div id="modal-submission-format-content"></div>
                     </div>
-                    <div id="questions-tab" class="tab-content">
-                        <h3>Generated Clarification Questions:</h3>
-                        <div id="questions-result-content"></div>
-                    </div>
-                    <div id="deadlines-tab" class="tab-content">
-                        <h3>Key Deadlines & Submission Format:</h3>
-                        <div id="deadlines-result-content">
-                            <h4>Deadlines:</h4>
-                            <div id="deadlines-only-content"></div>
-                            <h4 style="margin-top: 1rem;">Submission Format:</h4>
-                            <div id="submission-format-content"></div>
-                        </div>
-                    </div>
-                    <div id="requirements-tab" class="tab-content">
-                        <h3>Requirements:</h3>
-                        <div id="requirements-result-content"></div>
-                    </div>
-                    <div id="stakeholders-tab" class="tab-content">
-                        <h3>Mentioned Stakeholders:</h3>
-                        <div id="stakeholders-result-content"></div>
-                    </div>
-                    <div id="risks-tab" class="tab-content">
-                        <h3>Potential Risks/Red Flags:</h3>
-                        <div id="risks-result-content"></div>
-                    </div>
-                    <div id="registration-tab" class="tab-content">
-                        <h3>Registration Details:</h3>
-                        <div id="registration-result-content"></div>
-                    </div>
-                    <div id="licenses-tab" class="tab-content">
-                        <h3>Licenses & Certifications:</h3>
-                        <div id="licenses-result-content"></div>
-                    </div>
-                    <div id="budget-tab" class="tab-content">
-                        <h3>Budget Information:</h3>
-                        <div id="budget-result-content"></div>
-                    </div>
+                    <div id="modal-requirements-tab" class="tab-content"><div id="modal-requirements-result-content"></div></div>
+                    <div id="modal-stakeholders-tab" class="tab-content"><div id="modal-stakeholders-result-content"></div></div>
+                    <div id="modal-risks-tab" class="tab-content"><div id="modal-risks-result-content"></div></div>
+                    <div id="modal-registration-tab" class="tab-content"><div id="modal-registration-result-content"></div></div>
+                    <div id="modal-licenses-tab" class="tab-content"><div id="modal-licenses-result-content"></div></div>
+                    <div id="modal-budget-tab" class="tab-content"><div id="modal-budget-result-content"></div></div>
                 </div>
             </div>
         </div>
@@ -165,26 +197,37 @@
             yearSpanRFP.textContent = new Date().getFullYear();
         }
 
-        function openTab(evt, tabName) {
+        // Helper to manage tabs for a given container
+        function openTabGeneric(evt, tabName, containerElementId) {
             var i, tabcontent, tablinks;
-            var resultsArea = document.getElementById('analysis-results-area');
-            if (!resultsArea) return;
+            var container = document.getElementById(containerElementId);
+            if (!container) return;
 
-            tabcontent = resultsArea.getElementsByClassName("tab-content");
+            tabcontent = container.getElementsByClassName("tab-content");
             for (i = 0; i < tabcontent.length; i++) {
                 tabcontent[i].style.display = "none";
             }
-            tablinks = resultsArea.getElementsByClassName("tab-link");
+            tablinks = container.getElementsByClassName("tab-link");
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
             }
-            const targetTab = document.getElementById(tabName);
+            const targetTab = document.getElementById(tabName); // Assumes tabName IDs are globally unique
             if (targetTab) {
                 targetTab.style.display = "block";
             }
             if (evt && evt.currentTarget) {
                 evt.currentTarget.className += " active";
             }
+        }
+
+        // Specifically for tabs within the modal's analysis results
+        function openModalTab(evt, tabName) {
+            openTabGeneric(evt, tabName, 'modal-analysis-results-area');
+        }
+
+        // Specifically for tabs within the main page's view saved RFP details section
+        function openViewTab(evt, tabName) {
+            openTabGeneric(evt, tabName, 'view-analysis-results-area');
         }
     </script>
 </body>
