--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -6,7 +6,8 @@
     <title>Cendien RFP Analyzer</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="rfp-style.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="rfp-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -17,8 +18,13 @@
             <nav>
                 <a href="index.html" class="nav-link">Home</a>
                 <span class="nav-current-page">RFP Analyzer</span>
-                <a href="resume-generator.html" class="nav-link">AI Resume Generator</a> 
+                <a href="resume-generator.html" class="nav-link">AI Resume Generator</a>
             </nav>
+            <div class="settings-icon-container">
+                <button id="open-prompt-settings-modal-button" class="action-icon" title="Edit AI Prompts">
+                    <i class="fas fa-cog"></i>
+                </button>
+            </div>
         </div>
     </header>
 
@@ -146,8 +152,12 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="rfpFileUpload">Upload RFP Document (PDF only):</label>
+                        <label for="rfpFileUpload">Upload Main RFP Document (PDF only):</label>
                         <input type="file" id="rfpFileUpload" name="rfpFileUpload" accept=".pdf" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="rfpAddendumUpload">Upload Addendum(s) (Optional, PDFs only):</label>
+                        <input type="file" id="rfpAddendumUpload" name="rfpAddendumUpload" accept=".pdf" multiple>
                     </div>
                     <button type="submit" id="generate-analysis-button" class="btn btn-secondary">Analyze RFP</button>
                 </form>
@@ -180,6 +190,23 @@
                     <div id="modal-licenses-tab" class="tab-content"><div id="modal-licenses-result-content"></div></div>
                     <div id="modal-budget-tab" class="tab-content"><div id="modal-budget-result-content"></div></div>
                 </div>
+            </div>
+        </div>
+
+        <div id="prompt-settings-modal" class="modal-overlay" style="display: none;">
+            <div class="modal-content">
+                <span class="modal-close-button" id="prompt-modal-close-button">&times;</span>
+                <h2 style="text-align: center; margin-bottom: 1.5rem;">Edit AI Prompts</h2>
+                
+                <div class="form-group">
+                    <label for="rfpAnalysisPromptTextarea">RFP Analysis Prompt:</label>
+                    <textarea id="rfpAnalysisPromptTextarea" name="rfpAnalysisPromptTextarea" rows="15" style="font-size: 0.85rem; line-height: 1.4;"></textarea>
+                    <small>This prompt is used to instruct the AI on how to analyze the RFP text and what sections to generate. Modifying this can change the structure and content of the analysis results.</small>
+                </div>
+
+                <button id="save-prompts-button" class="btn btn-primary" style="margin-top: 1rem;">Save Prompts</button>
+                <button id="reset-prompts-button" class="btn btn-secondary" style="margin-top: 1rem; margin-left: 0.5rem;">Reset to Default</button>
+                <div id="prompt-save-status" class="loading-container" style="display: none; margin-top: 1rem; min-height: 30px;"></div>
             </div>
         </div>
     </main>
