--- a/public/rfp-question-generator.html
+++ b/public/rfp-question-generator.html
@@ -196,16 +196,33 @@
         <div id="prompt-settings-modal" class="modal-overlay" style="display: none;">
             <div class="modal-content">
                 <span class="modal-close-button" id="prompt-modal-close-button">&times;</span>
-                <h2 style="text-align: center; margin-bottom: 1.5rem;">Edit AI Prompts</h2>
+                <h2 style="text-align: center; margin-bottom: 1.5rem;">Edit AI Section Prompts</h2>
                 
                 <div class="form-group">
-                    <label for="rfpAnalysisPromptTextarea">RFP Analysis Prompt:</label>
-                    <textarea id="rfpAnalysisPromptTextarea" name="rfpAnalysisPromptTextarea" rows="15" style="font-size: 0.85rem; line-height: 1.4;"></textarea>
-                    <small>This prompt is used to instruct the AI on how to analyze the RFP text and what sections to generate. Modifying this can change the structure and content of the analysis results.</small>
+                    <label for="promptSectionSelector">Select Section to Edit:</label>
+                    <select id="promptSectionSelector" name="promptSectionSelector" class="section-selector" style="width: 100%; margin-bottom: 1rem;">
+                        <option value="summary">1. Summary</option>
+                        <option value="questions">2. Clarification Questions</option>
+                        <option value="deadlines">3. Key Deadlines</option>
+                        <option value="submissionFormat">4. Submission Format</option>
+                        <option value="requirements">5. Requirements</option>
+                        <option value="stakeholders">6. Stakeholders/Key Contacts</option>
+                        <option value="risks">7. Potential Risks/Red Flags</option>
+                        <option value="registration">8. Registration Requirements</option>
+                        <option value="licenses">9. Licenses/Certifications</option>
+                        <option value="budget">10. Budget Constraints</option>
+                        </select>
                 </div>
 
-                <button id="save-prompts-button" class="btn btn-primary" style="margin-top: 1rem;">Save Prompts</button>
-                <button id="reset-prompts-button" class="btn btn-secondary" style="margin-top: 1rem; margin-left: 0.5rem;">Reset to Default</button>
+                <div class="form-group">
+                    <label for="rfpIndividualPromptTextarea">Prompt for Selected Section:</label>
+                    <textarea id="rfpIndividualPromptTextarea" name="rfpIndividualPromptTextarea" rows="10" style="font-size: 0.85rem; line-height: 1.4;"></textarea>
+                    <small>Edit the instruction for how the AI should generate this specific section of the analysis. The AI will still receive the full RFP text.</small>
+                </div>
+
+                <button id="save-current-prompt-button" class="btn btn-primary" style="margin-top: 1rem;">Save Current Section Prompt</button>
+                <button id="reset-current-prompt-button" class="btn btn-secondary" style="margin-top: 1rem; margin-left: 0.5rem;">Reset Current Section to Default</button>
+                <button id="reset-all-prompts-button" class="btn btn-danger" style="margin-top: 1rem; margin-left: 0.5rem; background-color: #dc3545; border-color: #dc3545;">Reset All Prompts to Default</button>
                 <div id="prompt-save-status" class="loading-container" style="display: none; margin-top: 1rem; min-height: 30px;"></div>
             </div>
         </div>
